--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,104 @@
-/* You can add global styles to this file, and also import other style files */
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use "@angular/material" as mat;
+
+/* Importing Bootstrap SCSS file. */
+@use "bootstrap/scss/bootstrap";
+
+html {
+  @include mat.theme(
+    (
+      color: (
+        theme-type: light,
+        primary: mat.$azure-palette,
+        tertiary: mat.$blue-palette,
+      ),
+      typography: Roboto,
+      density: 0,
+    )
+  );
+} /* You can add global styles to this file, and also import other style files */
+
+:root {
+  --avatar-size: 160px;
+
+  --cv-blue: #6495ed; // cornflowerblue
+  --cv-white: #f0f0f0;
+  --cv-lightgrey: #ccc;
+  --cv-grey: #8a8a8a;
+  --cv-darkgrey: #181818;
+  --cv-black: #000;
+  --cv-red: #a00;
+
+  // Transparent black
+  --black10: rgba(20, 20, 20, 0.1);
+  --black20: rgba(20, 20, 20, 0.2);
+  --black25: rgba(20, 20, 20, 0.25);
+  --black30: rgba(20, 20, 20, 0.3);
+  --black35: rgba(20, 20, 20, 0.35);
+  --black40: rgba(20, 20, 20, 0.4);
+  --black60: rgba(20, 20, 20, 0.6);
+  --black70: rgba(20, 20, 20, 0.7);
+  --black75: rgba(20, 20, 20, 0.75);
+  --black80: rgba(20, 20, 20, 0.8);
+  --black85: rgba(20, 20, 20, 0.85);
+  --black90: rgba(20, 20, 20, 0.9);
+  --black95: rgba(20, 20, 20, 0.95);
+  --black98: rgba(20, 20, 20, 0.98);
+
+  // Transparent white
+  --white10: rgba(250, 250, 250, 0.1);
+  --white20: rgba(250, 250, 250, 0.25);
+  --white25: rgba(250, 250, 250, 0.2);
+  --white30: rgba(250, 250, 250, 0.3);
+  --white35: rgba(250, 250, 250, 0.35);
+  --white40: rgba(250, 250, 250, 0.4);
+  --white60: rgba(250, 250, 250, 0.6);
+  --white70: rgba(250, 250, 250, 0.7);
+  --white75: rgba(250, 250, 250, 0.75);
+  --white80: rgba(250, 250, 250, 0.8);
+  --white85: rgba(250, 250, 250, 0.85);
+  --white90: rgba(250, 250, 250, 0.9);
+  --white95: rgba(250, 250, 250, 0.95);
+  --white98: rgba(250, 250, 250, 0.98);
+
+  // Fonts
+  --title-blurb-font: "Rock Salt", sans-serif;
+  --serif: "Merriweather", serif;
+  --sans-serif: "Montserrat", serif;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+}
+
+section {
+  background-color: var(--cv-darkgrey);
+  color: white;
+}
+
+// .light-bg {
+//   background-color: #fff;
+//   color: #181818;
+// }
+
+// .dark-bg {
+//   background-color: #181818;
+//   color: white;
+// }
+
+// html,
+// body {
+//   height: 100%;
+// }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.center {
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
