--- a/src/app/components/cupertino-bar/cupertino-bar.component.html
+++ b/src/app/components/cupertino-bar/cupertino-bar.component.html
@@ -1,8 +1,24 @@
 <section id="bar" class="vw-100 d-flex flex-row">
-  <i class="bi bi-house-fill px-2" home-hover></i>
-  <span id="about-app-btn" class="mx-2" (click)="showDialog('about')">About</span>
-  <span class="mx-1" (click)="showDialog('help')">Help</span>
+  <!-- Home button -->
+  <i class="bi bi-house-fill ps-3 pe-1" home-hover></i>
 
+  <!-- About app button -->
+  <span id="about-app-btn" class="ms-2" (click)="showDialog('about')">About</span>
+
+  <!-- Show help button -->
+  <span class="ms-2" (click)="showDialog('help')">Help</span>
+
+  @if (showWeather) {
+    <!-- Spacer -->
+    <div class="flex-fill"></div>
+    
+    <!-- Weather info -->
+    <weather-widget></weather-widget>
+  }
+
+  <!-- Spacer -->
   <div class="flex-fill"></div>
+
+  <!-- Clock -->
   <span id="clock" class=>{{ time() }}</span>
 </section>
