Fixed syntax for badge color ngClass

--- a/src/app/components/dialogs/todos-dialog/todo-card/todo-card.component.html
+++ b/src/app/components/dialogs/todos-dialog/todo-card/todo-card.component.html
@@ -9,7 +9,7 @@
       <!-- Status badge -->
       <div class="card-text ms-3">
         <!-- <span class="badge"> -->
-        <span class="badge" [ngClass]="getColorClass()">
+        <span class="badge" [ngClass]="getColorClass">
           {{ status }}
         </span>
       </div>
