--- a/src/app/components/dialog-window/dialog-window.component.scss
+++ b/src/app/components/dialog-window/dialog-window.component.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 20%;
   left: 25%;
-  min-width: 10%;
+  min-width: 250px;
   max-width: 1240px;
   border: 1px solid var(--cv-darkgrey);
   box-shadow: 2px 2px 6px var(--black30);
@@ -21,11 +21,16 @@
   font-weight: 500;
 }
 
+.full-radius {
+  border-radius: 10px;
+}
+
 * {
   color: var(--cv-darkgrey);
 }
 
-.close-btn {
+.close-btn,
+.minimize-btn {
   cursor: pointer;
   margin-right: 4px;
   text-align: center;
@@ -36,11 +41,17 @@
   transition: all 0.15s ease-in-out;
 }
 
-.close-btn:hover {
+.close-btn:hover,
+.minimize-btn:hover {
   border: 1px solid var(--cv-grey);
   background-color: var(--cv-grey);
+
   .bi-x {
     color: var(--cv-white);
+  }
+
+  img {
+    filter: brightness(163%);
   }
 }
 
