Disabled weather toggle

--- a/src/app/components/dialogs/settings-dialog/settings-dialog.component.html
+++ b/src/app/components/dialogs/settings-dialog/settings-dialog.component.html
@@ -41,6 +41,26 @@
       {{ showWeatherBtnLabel }}
     </button>
   </div>
+
+  <!-- Enable weather globally -->
+  <!-- <div class="d-flex flex-row mt-2">
+    <div class="align-content-center">
+      <span>Enable weather service</span>
+    </div>
+
+    <div class="flex-fill"></div> -->
+
+  <!-- Toggle weather in top bar button  -->
+  <!-- <button
+      type="button"
+      class="btn btn-outline-dark"
+      id="toggleWeatherBtn"
+      (click)="toggleWeatherService()"
+    >
+      {{ enableWeatherBtnLabel }}
+    </button>
+  </div> -->
+
   <!-- Show dynamic background row -->
   <!-- <div class="display-flex flex-row row">
     <div class="col align-content-center">
