Added action to close all dialogs

--- a/src/app/components/cupertino-bar/cupertino-bar.component.html
+++ b/src/app/components/cupertino-bar/cupertino-bar.component.html
@@ -1,6 +1,6 @@
 <section id="bar" class="vw-100 d-flex flex-row">
   <!-- Home button -->
-  <i class="bi bi-house-fill ps-3 pe-1" home-hover></i>
+  <i class="bi bi-house-fill ps-3 pe-1" home-hover (click)="closeAllDialogs()"></i>
 
   <!-- About app button -->
   <span id="about-app-btn" class="ms-2" (click)="showDialog('about')">About</span>
