--- a/src/app/components/dialogs/todos-dialog/todos-dialog.component.html
+++ b/src/app/components/dialogs/todos-dialog/todos-dialog.component.html
@@ -1,20 +1,41 @@
-<dialog-window class="pane" title="Todos" type="todos">
-  <div id="size-wrapper"></div>
-  <div class="d-flex flex-row" id="header-row">
-    <div class="display-6">To Do</div>
-    <div class="flex-fill"></div>
-    <button
-      class="btn btn-outline-dark"
-      id="new-todo-btn"
-      (click)="openDialog('newTodo')"
-    >
-      <i class="bi bi-plus fs-2"></i>
-    </button>
+<dialog-window class="pane" title="To Do" type="todos">
+  <div id="size-wrapper">
+    <div class="d-flex flex-row align-items-center" id="header-row">
+      <div class="display-6">To Do</div>
+      <div class="flex-fill"></div>
+      <button
+        class="btn btn-outline-dark me-3"
+        id="show-archived-btn"
+        (click)="toggleShowArchived()"
+      >
+        {{ showArchived() ? "Hide archived" : "Show archived" }}
+      </button>
+
+      <button
+        class="btn btn-outline-dark"
+        id="new-todo-btn"
+        (click)="openDialog('newTodo')"
+      >
+        <i class="bi bi-plus fs-2"></i>
+      </button>
+    </div>
+
+    <ng-container *ngIf="todos() as todoList">
+      <div
+        cdkDropList
+        class="todos-viewport"
+        (cdkDropListDropped)="drop($event)"
+      >
+        @for (todo of todoList; track todo) {
+        <div class="example-box" cdkDrag>
+          <todo-card [todo]="todo"></todo-card>
+        </div>
+        }
+      </div>
+    </ng-container>
   </div>
-  @for (todo of todos(); track todo.id) {
-  <todo-card [todo]="todo"></todo-card>
-  }
 </dialog-window>
+
 @if (getDialogState('showNewTodoDialog')) {
 <new-todo-dialog />
 } @if (getDialogState('showEditTodoDialog')) {
