--- a/src/app/components/dialogs/stlviewer-dialog/stlviewer-dialog.component.html
+++ b/src/app/components/dialogs/stlviewer-dialog/stlviewer-dialog.component.html
@@ -1,5 +1,17 @@
 <dialog-window class="pane" title="STL Viewer" type="stlviewer">
-  <button type="button" class="btn btn-outline-dark" (click)="closeDialog()">
-    Close
-  </button>
+  <div id="productView"></div>
+
+  <!-- <div class="d-flex flex-row justify-content-center form-check my-3">
+    <div class="animatePreview">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        name="animatePreview"
+        id="animatePreview"
+        (change)="toggleAnimation()"
+        [(checked)]="animated"
+      />
+    </div>
+    <div class="text-white form-check-label">Spin thumbnail</div>
+  </div> -->
 </dialog-window>
