--- a/src/app/components/dialogs/skills-dialog/skills-dialog.component.scss
+++ b/src/app/components/dialogs/skills-dialog/skills-dialog.component.scss
@@ -1,3 +1,12 @@
 .size-wrapper {
-  min-width: 600px;
+  min-width: 1000px;
+  height: 800px;
+  overflow-y: auto;
+}
+
+#skills-chart {
+  border: 1px solid var(--cv-lightgrey);
+  box-shadow: 0px 0px 5px var(--cv-grey);
+  border-radius: 10px;
+  background-color: #fff;
 }
