--- a/src/app/components/cupertino-bar/weather-widget/weather-widget.component.html
+++ b/src/app/components/cupertino-bar/weather-widget/weather-widget.component.html
@@ -1,15 +1,13 @@
-@if (!locationAllowed()) {
-<!-- <span>Allow location permissions for weather data!</span> -->
-} @else if (forecastData() == undefined) {
+@if (forecastData() == undefined) {
 <span>Fetching weather data...</span>
 } @else {
-<div id="weather-text">
+<div id="weather-text" (click)="openWeatherDialog()">
   <img
     src="{{ forecastData()?.current?.condition?.icon }}"
     alt="Weather conditions icon"
     id="weather-icon"
   />
-  <span (click)="openWeatherDialog()">
+  <span>
     Feels like {{ forecastData()?.current?.feelslike_c | number : "1.0-0" }}c
   </span>
 </div>
