--- a/src/app/components/dialog-window/dialog-window.component.scss
+++ b/src/app/components/dialog-window/dialog-window.component.scss
@@ -12,7 +12,6 @@
 
 .window-header {
   cursor: move;
-  // background-color: var(--cv-lightgrey);
   background-color: var(--cv-white);
   padding: 5px;
   border-top-left-radius: 10px;
@@ -20,6 +19,8 @@
   font-family: "Roboto";
   text-shadow: 0px 0px 1px var(--cv-grey);
   font-weight: 500;
+  position: relative;
+  z-index: 10;
 }
 
 .full-radius {
@@ -33,14 +34,12 @@
 .close-btn,
 .minimize-btn {
   cursor: pointer;
-  // margin-right: 4px;
   text-align: center;
   height: 24px;
   width: 24px;
   border: 1px solid var(--cv-grey);
   border-radius: 50%;
   transition: all 0.15s ease-in-out;
-  // margin-top: 4px;
 }
 
 .close-btn:hover,
