Added isDesktop checks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <div class="d-flex flex-column vh-100">
+  @if (isDesktop) {
   <cupertino-bar></cupertino-bar>
+  }
 
   <div class="flex-fill bg-white">
     <router-outlet></router-outlet>
   </div>
 
+  @if (isDesktop) {
   <app-dock></app-dock>
+  }
 </div>
